# projectx

./: .gitignore
backend/: .gitignore  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251103_151604_add_parts_column_to_messages.py  70560954af5c_drop_todos_table.py  74e106517cba_add_conversations_and_messages_tables.py  ab71638bf1be_changed_to_agents.py  ae7085543b34_initial_migration.py
backend/app/: __init__.py  cli.py  database.py  models.py
backend/app/models/: __init__.py  conversation.py  todo.py  websocket.py
backend/app/routes/: chatbot.py  messaging.py  messaging_tools.py  todos.py
backend/app/services/: connection_manager.py
backend/app/tools/: __init__.py  agent_tools.py  path_validator.py
backend/app/utils/: logger.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: theme-toggle.tsx
frontend/hooks/: useChat.ts  useMessaging.ts  useWebsocket.ts
frontend/lib/: api.ts
swe_bench_eval/: .gitignore  README.md  load_task.py  pyproject.toml  run_eval.sh  run_evaluation.sh
swe_bench_eval/tasks/astropy__astropy-12907/: astropy_fix.patch  predictions.jsonl  prompt.txt  task.json
swe_bench_eval/tasks/astropy__astropy-14182/: predictions.jsonl  prompt.txt  task.json
swe_bench_eval/tasks/astropy__astropy-14365/: predictions.jsonl  prompt.txt  task.json
swe_bench_eval/tasks/astropy__astropy-14995/: predictions.jsonl  prompt.txt  task.json  test_fix.py
swe_bench_eval/tasks/astropy__astropy-6938/: predictions.jsonl  prompt.txt  task.json
(+21 files in other folders)
