[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["billsusanto <billsusanto01@gmail.com>"]
package-mode = true

[tool.poetry.scripts]
server = "app.cli:server"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.120.2,<0.121.0"
uvicorn = ">=0.38.0,<0.39.0"
logfire = {extras = ["fastapi"], version = "^4.14.2"}
python-dotenv = ">=1.2.1,<2.0.0"
pydantic = ">=2.12.3,<3.0.0"
sqlmodel = "^0.0.27"
asyncpg = "^0.30.0"
alembic = "^1.17.1"
greenlet = "^3.2.4"
websockets = "^15.0.1"
pydantic-ai = "^1.9.1"
datasets = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"