[project]
name = "swe-bench-eval"
version = "0.1.0"
description = ""
authors = [
    {name = "billsusanto",email = "billsusanto01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal (>=1.2.1,<2.0.0)",
    "datasets (>=4.3.0,<5.0.0)",
    "swebench @ file:///Users/billsusanto/Documents/Projects/projectx/SWE-bench"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
swebench = {develop = true}
